--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "sfdd <>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --progress --hot --inline",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
     "build": "rm -rf dist && cross-env NODE_ENV=production webpack --progress --hide-modules --progress"
   },
   "dependencies": {
