--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "rm -rf dist && cross-env NODE_ENV=production webpack --progress --hide-modules --progress"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "element-ui": "^1.3.7",
     "lru-cache": "^4.1.1",
     "vue": "^2.3.3",
