--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
-    "build": "rm -rf dist && cross-env NODE_ENV=production webpack --progress --hide-modules --progress"
+    "build": "rm -rf dist && cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
     "axios": "^0.16.2",
