--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuex-router-sync": "^4.2.0"
   },
   "devDependencies": {
+    "autodll-webpack-plugin": "^0.0.7",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -31,6 +32,6 @@
     "vue-loader": "^12.1.0",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.5.0"
   }
 }
