--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "echarts": "^3.6.2",
     "element-ui": "^1.3.7",
     "lru-cache": "^4.1.1",
     "vue": "^2.3.3",
