--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^1.3.7",
     "lru-cache": "^4.1.1",
     "vue": "^2.3.3",
+    "vue-meta": "^1.0.4",
     "vue-router": "^2.6.0",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.2.0"
